Fix color of subtitle for more readability

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -25,7 +25,7 @@ h1 > a {
 	}
 }
 header > h1 small {
-	color: black;
+	color: rgba(255,255,255,0.5);
 }
 
 main {
